# AprilPose

./: .gitignore  AGENTS.md  Cargo.toml  README.md  main.py  pyproject.toml
aprilpose/: __init__.py
aprilpose/benchmark/: __init__.py  cli.py  config.py  metrics.py  models.py  reference.py  runner.py
calibration/: diwakar_calibration.toml  good.toml
docs/: internal-line-pose-refinement.md  paper-method.md
notebooks/: notebook_repl_copy.py  pd_support.py  random_fish_search_multithreaded_160_2026_undistort_image_v2.ipynb  ref_pyfile.py  verification_notebook.ipynb
scripts/: __init__.py  benchmark_reference.py  data_read.py  evaluate_mocap_orientation_error.py  evaluate_rotation_smoothness.py  line_refine_single_frame.py  pd_support.py  run_diwakar_evaluation.sh
src/: lib.rs
tests/: test_benchmark_metrics.py  test_line_refinement_acceptance.py
