[package]
name = "aprilpose_rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "aprilpose_rust"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.27"
pyo3 = { version = "0.27", features = ["extension-module"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false
overflow-checks = false
