[build-system]
requires = ["maturin>=1.14,<2"]
build-backend = "maturin"

[project]
name = "aprilpose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "maturin>=1.14.0",
  "more-itertools>=11.1.0",
  "msgpack>=1.2.0",
  "msgpack-numpy>=0.4.8",
  "opencv-contrib-python>=4.13.0.92",
  "pandas>=3.0.3",
  "polars>=1.41.2",
  "scipy>=1.17.1",
  "torch>=2.11.0",
  "torchvision>=0.26.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
